Clean up test code